--- a/frontend/src/components/Title/Title.scss
+++ b/frontend/src/components/Title/Title.scss
@@ -1,5 +1,7 @@
+@import '../../theme.scss';
+
 .title-container {
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 2px $shadow-color;
   margin-top: 20px;
   text-align: center;
 }
@@ -7,6 +9,6 @@
 .title {
   padding: 4px;
   font-size: 20px;
-  background-color: #3cac48;
+  background-color: $primary-color;
   color: white;
 }
