--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,5 @@
+@import 'theme.scss';
+
 body {
   height: 100%;
   margin: 0;
@@ -10,7 +12,7 @@ body {
 
 html {
   height: 100%;
-  color:#403b3b;
+  color: $secondary-color;
 }
 
 #root {
